完成了购物车相关功能的实现

--- a/manifest.json
+++ b/manifest.json
@@ -45,7 +45,15 @@
         "appid" : "wxb7a15e7c20ac251c",
         "setting" : {
             "urlCheck" : true,
-            "checkSiteMap":false
+            "checkSiteMap" : false
+        },
+        "requiredPrivateInfos":[
+          "chooseAddress"
+        ],
+        "permission" : {
+            "scope.userLocation" : {
+                "desc" : ""
+            }
         }
     }
 }
